Update ReservationController Some Methods needs authentication to get the id to use it, so they are not ready yet
