# Backend/app/Http/Controllers/ReservationController.php
@@ -13,6 +13,8 @@ use App\Models\Table;
 use App\Models\User;
 use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
+use Illuminate\Support\Collection;
+use Illuminate\Support\Facades\Log;
 
 /**
  * @OA\Schema(
@@ -158,10 +160,12 @@ class ReservationController
      *     )
      * )
      */
-    public function addReservation($user_id, $Date, $time, $numOfCustomers, $ReservationType)
+    public function addReservation($user_id, $Date, $time, $numOfCustomers, $ReservationType): JsonResponse
     {
         try {
-            $time = new \DateTime($time);
+            if (is_string($time)) {
+                $time = new \DateTime($time);
+            }
             $newTime = clone $time;
 
             if ($ReservationType === 'Drink') {
@@ -170,11 +174,17 @@ class ReservationController
                 $newTime->add(new \DateInterval('PT2H'));
             }
 
+            $timeFormatted = $time->format('H:i:s');
             $timeExpectedToLeave = $newTime->format('H:i:s');
         } catch (\Exception $e) {
             return response()->json(['error' => $e->getMessage()], 500);
         }
-        $availableTables = $this->findAvailableTables($time, $ReservationType, $Date);
+
+        $availableTables = $this->findAvailableTables($timeFormatted, $ReservationType, $Date);
+        if ($availableTables->isEmpty()) {
+            return response()->json(['error' => 'No available tables found'], 404);
+        }
+
         $tablesReserved = false;
         $availableChairs = 0;
 
@@ -183,7 +193,7 @@ class ReservationController
                 Reservation::create([
                     'UserID' => $user_id,
                     'Date' => $Date,
-                    'Time' => $time,
+                    'Time' => $timeFormatted,
                     'NumOfCustomers' => $numOfCustomers,
                     'ReservationType' => $ReservationType,
                     'TableID' => $table->TableID,
@@ -194,26 +204,34 @@ class ReservationController
             }
             $availableChairs += $table->NumberOfChairs;
         }
-        if (!$tablesReserved && $availableChairs >= $numOfCustomers) {
+
+        if (!$tablesReserved && $availableChairs >= $numOfCustomers && $numOfCustomers > 0) {
             $largestTable = $availableTables->last();
             $chairsToReserve = $largestTable->NumberOfChairs;
+
             Reservation::create([
                 'UserID' => $user_id,
                 'Date' => $Date,
-                'Time' => $time,
+                'Time' => $timeFormatted,
                 'NumOfCustomers' => $chairsToReserve,
                 'ReservationType' => $ReservationType,
                 'TableID' => $largestTable->TableID,
                 'TimeExpectedToLeave' => $timeExpectedToLeave,
             ]);
             $remainingCustomers = $numOfCustomers - $chairsToReserve;
+
             if ($remainingCustomers > 0) {
-                return $this->addReservation($user_id, $Date, $time->format('H:i:s'), $remainingCustomers, $ReservationType);
+                // Recursive call to handle remaining customers
+                return $this->addReservation($user_id, $Date, $timeFormatted, $remainingCustomers, $ReservationType);
             }
+        } elseif ($tablesReserved) {
+            return response()->json(['message' => 'Reservation created successfully'], 201);
         } else {
             return response()->json([
-                'error' => "No enough tables for this reservation (we can't serve more than $availableChairs customers at this time)"], 400);
+                'error' => "No enough tables for this reservation (we can't serve more than $availableChairs customers at this time)"
+            ], 400);
         }
+
         return response()->json(['message' => 'Reservation created successfully'], 201);
     }
 
@@ -235,30 +253,53 @@ class ReservationController
      *         description="Reservation details to update",
      *         @OA\JsonContent(
      *             @OA\Property(property="Date", type="string", format="date"),
-     *             @OA\Property(property="time", type="string", format="time"),
-     *             @OA\Property(property="numOfCustomers", type="integer"),
+     *             @OA\Property(property="Time", type="string", format="time"),
+     *             @OA\Property(property="NumOfCustomers", type="integer"),
      *             @OA\Property(property="ReservationType", type="string")
      *         )
      *     ),
      *     @OA\Response(
      *         response=200,
-     *         description="Reservation updated"
+     *         description="Reservation updated successfully"
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Reservation not found"
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="Error occurred while updating reservation"
      *     )
      * )
      */
-    public function updateReservation(Request $request, $reservationID)
+    public function updateReservation(Request $request, $reservationID): JsonResponse
     {
+        // Find the existing reservation
         $reservation = Reservation::find($reservationID);
         if (!$reservation) {
-            return response()->json(['error' => 'Invalid reservation id'], 404);
+            return response()->json(['error' => 'Invalid reservation ID'], 404);
         }
 
+        // Extract data from request
         $data = $request->all();
+        $user_id = $data['UserID'] ?? $reservation->UserID; // Use existing value if not provided
+        $Date = $data['Date'] ?? $reservation->Date;
+        $time = $data['Time'] ?? $reservation->Time;
+        $numOfCustomers = $data['NumOfCustomers'] ?? $reservation->NumOfCustomers;
+        $ReservationType = $data['ReservationType'] ?? $reservation->ReservationType;
 
-        $reservation -> update($data);
+        // Delete the existing reservation
+        $reservation->delete();
 
-        //TODO: When the customer number updated for the reservation delete the reservation and create a new one.
-        return response()->json($reservation, 200);
+        // Create a new reservation with updated details
+        $response = $this->addReservation($user_id, $Date, $time, $numOfCustomers, $ReservationType);
+
+        // Check response from addReservation
+        if ($response->getStatusCode() !== 201) {
+            return $response;
+        }
+
+        return response()->json(['message' => 'Reservation updated successfully'], 200);
     }
 
     /**
@@ -280,14 +321,14 @@ class ReservationController
      *     )
      * )
      */
-    public function deleteReservation($reservationID)
+    public function deleteReservation($reservationID): JsonResponse
     {
         $reservation = Reservation::find($reservationID);
         if (!$reservation) {
             return response()->json(['error' => 'Invalid reservation id'], 404);
         }
         $reservation -> delete();
-        return response()->json(null, 204);
+        return response()->json("Reservation Number $reservationID Deleted Successfully And No Longer Available.", 204);
     }
 
     /**
@@ -311,7 +352,7 @@ class ReservationController
      */
     public function getReservationByDate($Date)
     {
-
+        //TODO:This need authentication to git user ID To find his Reservation on specific Date
     }
 
     /**
@@ -342,7 +383,7 @@ class ReservationController
      */
     public function getReservationByTime($Date, $time)
     {
-
+        //TODO:This need authentication to get user ID To find his Reservation on specific Date and time
     }
 
     /**
@@ -366,7 +407,7 @@ class ReservationController
      */
     public function getReservationByID($ReservationID)
     {
-
+        //TODO:This need authentication to get the Reservation by id if its belong to the user who want to receive it
     }
 
     /**
@@ -381,9 +422,13 @@ class ReservationController
      *     )
      * )
      */
-    public function getAllUsersReservations()
+    public function getAllUsersReservations(): JsonResponse
     {
-
+        $reservations = Reservation::all();
+        if ($reservations->isEmpty()) {
+            return response()->json(['message' => 'Nothing get'], 404);
+        }
+        return response()->json($reservations, 200);
     }
 
     /**
@@ -405,9 +450,13 @@ class ReservationController
      *     )
      * )
      */
-    public function getAllReservations($user_id = null)
+    public function getAllReservations($user_id): JsonResponse
     {
-
+        $reservations = Reservation::find(user_id: $user_id);
+        if ($reservations->isEmpty()) {
+            return response()->json(['message' => 'Nothing get'], 404);
+        }
+        return response()->json($reservations, 200);
     }
 
     /**
@@ -429,9 +478,13 @@ class ReservationController
      *     )
      * )
      */
-    public function getAllReservationByDate($Date)
+    public function getAllReservationByDate($Date): JsonResponse
     {
-
+        $reservations = Reservation::where('Date', $Date)->get();
+        if ($reservations->isEmpty()) {
+            return response()->json(['message' => 'Nothing get'], 404);
+        }
+        return response()->json($reservations, 200);
     }
 
     /**
@@ -460,18 +513,22 @@ class ReservationController
      *     )
      * )
      */
-    public function getAllReservationByTime($Date, $time)
+    public function getAllReservationByTime($Date, $time): JsonResponse
     {
-
+        $reservations = Reservation::where('Date', $Date)->where('Time', $time)->get();
+        if ($reservations->isEmpty()) {
+            return response()->json(['message' => 'Nothing get'], 404);
+        }
+        return response()->json($reservations, 200);
     }
 
     /**
      * @param $time
      * @param $ReservationType
      * @param $Date
-     * @return JsonResponse
+     * @return Collection
      */
-    public function findAvailableTables($time, $ReservationType, $Date): JsonResponse
+    public function findAvailableTables($time, $ReservationType, $Date): Collection
     {
         try {
             $time = new \DateTime($time);
@@ -485,10 +542,10 @@ class ReservationController
 
             $timeExpectedToLeave = $newTime->format('H:i:s');
         } catch (\Exception $e) {
-            return response()->json(['error' => $e->getMessage()], 500);
+            return collect(); // Return an empty collection on failure
         }
 
-        $availableTables = Table::whereNotIn('TableID', function ($query) use ($Date, $time, $timeExpectedToLeave) {
+        return Table::whereNotIn('TableID', function ($query) use ($Date, $time, $timeExpectedToLeave) {
             $query->select('TableID')
                 ->from('reservations')
                 ->where('date', $Date)
@@ -503,6 +560,5 @@ class ReservationController
         })
             ->orderBy('NumberOfChairs', 'asc')
             ->get();
-        return response()->json($availableTables, 200);
     }
 }
