# Backend/storage/api-docs/api-docs.json
@@ -609,14 +609,14 @@
                 }
             }
         },
-        "/reservations/{id}": {
+        "/api/reservations/{id}": {
             "get": {
                 "tags": [
                     "Reservations"
                 ],
                 "summary": "Get reservations for a specific user",
                 "description": "Retrieve all reservations for a user.",
-                "operationId": "b7e4764ba6df6342f57d83d48f81824a",
+                "operationId": "519ad8a845fabc240d63205ab5695f78",
                 "parameters": [
                     {
                         "name": "id",
@@ -635,14 +635,14 @@
                 }
             }
         },
-        "/reservations/{user_id}/{Date}/{time}/{numOfCustomers}/{ReservationType}": {
+        "/api/reservations/{user_id}/{Date}/{time}/{numOfCustomers}/{ReservationType}": {
             "post": {
                 "tags": [
                     "Reservations"
                 ],
                 "summary": "Add a new reservation",
                 "description": "Allows users to add a new reservation.",
-                "operationId": "e6a68f82ca2c56b32e69447c0ac5011d",
+                "operationId": "1c50f3a38d770c52441c4c84c7d81dee",
                 "parameters": [
                     {
                         "name": "user_id",
@@ -699,14 +699,14 @@
                 }
             }
         },
-        "/reservations/{reservationID}": {
+        "/api/reservations/{reservationID}": {
             "delete": {
                 "tags": [
                     "Reservations"
                 ],
                 "summary": "Delete a reservation",
                 "description": "Allows users to delete a reservation.",
-                "operationId": "9ed2605aabb14c761483129e5870d006",
+                "operationId": "71d6ca19c1fcb9db3c50fd372c22bc8a",
                 "parameters": [
                     {
                         "name": "reservationID",
@@ -730,7 +730,7 @@
                 ],
                 "summary": "Update a reservation",
                 "description": "Allows users to update an existing reservation.",
-                "operationId": "384a26ce36523200bc171e3e94631cc7",
+                "operationId": "5d9c88f32b75d66e52e0b5e1530b8dbe",
                 "parameters": [
                     {
                         "name": "reservationID",
@@ -753,11 +753,11 @@
                                         "type": "string",
                                         "format": "date"
                                     },
-                                    "time": {
+                                    "Time": {
                                         "type": "string",
                                         "format": "time"
                                     },
-                                    "numOfCustomers": {
+                                    "NumOfCustomers": {
                                         "type": "integer"
                                     },
                                     "ReservationType": {
@@ -771,19 +771,25 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Reservation updated"
+                        "description": "Reservation updated successfully"
+                    },
+                    "404": {
+                        "description": "Reservation not found"
+                    },
+                    "400": {
+                        "description": "Error occurred while updating reservation"
                     }
                 }
             }
         },
-        "/reservations/date/{Date}": {
+        "/api/reservations/date/{Date}": {
             "get": {
                 "tags": [
                     "Reservations"
                 ],
                 "summary": "Get reservations by date",
                 "description": "Retrieve reservations based on the date.",
-                "operationId": "1cee41396053eeac3a093736b4ed455f",
+                "operationId": "4afa52be95744a9651d39e2b61666cd0",
                 "parameters": [
                     {
                         "name": "Date",
@@ -803,14 +809,14 @@
                 }
             }
         },
-        "/reservations/date/{Date}/time/{time}": {
+        "/api/reservations/date/{Date}/time/{time}": {
             "get": {
                 "tags": [
                     "Reservations"
                 ],
                 "summary": "Get reservations by date and time",
                 "description": "Retrieve reservations based on the date and time.",
-                "operationId": "6b47ea52fd490d0798f73c349be7d308",
+                "operationId": "cf5e009c65f7b5506a22030fe854f2fb",
                 "parameters": [
                     {
                         "name": "Date",
@@ -840,14 +846,14 @@
                 }
             }
         },
-        "/reservations/id/{ReservationID}": {
+        "/api/reservations/id/{ReservationID}": {
             "get": {
                 "tags": [
                     "Reservations"
                 ],
                 "summary": "Get reservation by ID",
                 "description": "Retrieve a specific reservation by its ID.",
-                "operationId": "2d0092b8e20c96724b1408aed41ebe66",
+                "operationId": "3888243999f21b7ddcfd52026f4756f0",
                 "parameters": [
                     {
                         "name": "ReservationID",
@@ -866,14 +872,14 @@
                 }
             }
         },
-        "/staff/reservations": {
+        "/api/staff/reservations": {
             "get": {
                 "tags": [
                     "Reservations"
                 ],
                 "summary": "Staff: Get all user reservations",
                 "description": "Retrieve all reservations for all users (staff only).",
-                "operationId": "024c40d5fe3acdb9ea072fe870928dc5",
+                "operationId": "a0379e46234deef68814ba7749ea6eeb",
                 "responses": {
                     "200": {
                         "description": "Reservations retrieved"
@@ -881,14 +887,14 @@
                 }
             }
         },
-        "/staff/reservations/{user_id}": {
+        "/api/staff/reservations/{user_id}": {
             "get": {
                 "tags": [
                     "Reservations"
                 ],
                 "summary": "Staff: Get all reservations for a specific user",
                 "description": "Retrieve all reservations for a specific user (staff only).",
-                "operationId": "7635ce66daa4e952b87993e372b94e38",
+                "operationId": "a3a6fc55ed3889785756e5ab36dba1f1",
                 "parameters": [
                     {
                         "name": "user_id",
@@ -907,14 +913,14 @@
                 }
             }
         },
-        "/staff/reservations/date/{Date}": {
+        "/api/staff/reservations/date/{Date}": {
             "get": {
                 "tags": [
                     "Reservations"
                 ],
                 "summary": "Staff: Get reservations by date",
                 "description": "Retrieve reservations by date (staff only).",
-                "operationId": "1f79fb2c119a92ab9170b127d529c9f7",
+                "operationId": "a8cc73c7f1a83f5950e2dc193ee7e99a",
                 "parameters": [
                     {
                         "name": "Date",
@@ -934,14 +940,14 @@
                 }
             }
         },
-        "/staff/reservations/date/{Date}/time/{time}": {
+        "/api/staff/reservations/date/{Date}/time/{time}": {
             "get": {
                 "tags": [
                     "Reservations"
                 ],
                 "summary": "Staff: Get reservations by date and time",
                 "description": "Retrieve reservations by date and time (staff only).",
-                "operationId": "a1b0b96596c675ab6708f8b2ef1db88b",
+                "operationId": "c59f3fc8a489d6268c3036ad7ea462a4",
                 "parameters": [
                     {
                         "name": "Date",
